(re)add .listbox

--- a/index.html
+++ b/index.html
@@ -5,27 +5,29 @@
     <link rel="stylesheet" href="css/hours.css">
   </head>
   <body>
-    <ul>
-      <li><span>Hours</span></li>
-      <li>Monday</li>
-      <li>Tuesday</li>
-      <li>Wednesday</li>
-      <li>Thursday</li>
-      <li>Friday</li>
-      <li>Saturday</li>
-      <li>Sunday</li>
-    </ul>
-    <ul>
-      <li id="open-close"></li>
-      <li>9:00am to 6:00pm</li>
-      <li>9:00am to 6:00pm</li>
-      <li>9:00am to 6:00pm</li>
-      <li>9:00am to 6:00pm</li>
-      <li>9:00am to 8:00pm</li>
-      <li>9:00am to 8:00pm</li>
-      <li>Closed</li>
-    </ul>
+    <div class="listbox">
+      <ul>
+        <li><span>Hours</span></li>
+        <li>Monday</li>
+        <li>Tuesday</li>
+        <li>Wednesday</li>
+        <li>Thursday</li>
+        <li>Friday</li>
+        <li>Saturday</li>
+        <li>Sunday</li>
+      </ul>
+      <ul>
+        <li id="open-close"></li>
+        <li>9:00am to 6:00pm</li>
+        <li>9:00am to 6:00pm</li>
+        <li>9:00am to 6:00pm</li>
+        <li>9:00am to 6:00pm</li>
+        <li>9:00am to 8:00pm</li>
+        <li>9:00am to 8:00pm</li>
+        <li>Closed</li>
+      </ul>
+    </div>
+    <script type="text/javascript" src="js/zepto.min.js"></script>
+    <script type="text/javascript" src="js/hours.js"></script>
   </body>
 </html>
-<!--		script(type="text/javascript" src="js/zepto.min.js")-->
-<!--		script(type="text/javascript" src="js/hours.js")-->
