Change script tag from hours to hours-min

--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
       </ul>
     </div>
     <script type="text/javascript" src="js/zepto.min.js"></script>
-    <script type="text/javascript" src="js/hours.js"></script>
+    <script type="text/javascript" src="js/min/hours-min.js"></script>
   </body>
 </html>
