Remove needless span

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <div class="listbox">
       <ul>
-        <li><span>Hours</span></li>
+        <li>Hours</li>
         <li>Monday</li>
         <li>Tuesday</li>
         <li>Wednesday</li>
