Add google font link/ change name of id

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Hours</title>
     <link rel="stylesheet" href="css/hours.css">
+    <link href='http://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <div class="listbox">
@@ -17,7 +18,7 @@
         <li>Sunday</li>
       </ul>
       <ul>
-        <li id="open-close"></li>
+        <li id="openbox"></li>
         <li>9:00am to 6:00pm</li>
         <li>9:00am to 6:00pm</li>
         <li>9:00am to 6:00pm</li>
@@ -28,6 +29,6 @@
       </ul>
     </div>
     <script type="text/javascript" src="js/zepto.min.js"></script>
-    <script type="text/javascript" src="js/min/hours-min.js"></script>
+    <script type="text/javascript" src="js/hours.js"></script>
   </body>
 </html>
