Update script tag

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <li>Closed</li>
       </ul>
     </div>
-    <script type="text/javascript" src="js/zepto.min.js"></script>
+    <script type="text/javascript" src="bower_components/zepto/zepto.min.js"></script>
     <script type="text/javascript" src="js/hours.js"></script>
   </body>
 </html>
