--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="css/hours.css">
   </head>
   <body>
-    <div class="listbox">
+    <div>
       <ul>
         <li>Hours</li>
         <li>Monday</li>
