Add fontawesome link

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Hours</title>
     <link rel="stylesheet" href="css/hours.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   </head>
   <body>
     <div>
